@@ -1,11 +1,31 @@
+#!/bin/sh
+
+# test to see if fuse-devel (or fuse.h and libfuse) are installed
+#
+cat <<EOF >fuse-test.c
+#include <fuse.h>
+int main() { struct fuse_context ctx;
+return fuse_main(0, (char **) 0, (struct fuse_operations *) 0); }
+EOF
+make fuse-test
+if [ $? = 0 ] ; then have_fuse=1 ; fi
+
+cat <<EOF >gridsite.spec
+#
+# Autogenerated by make-gridsite-spec 
+#
+# You should modify  make-gridsite-spec  and rebuild RPM with  make rpm
+# rather than editing this spec file
+#
 Name: gridsite
-Version: %(echo ${MYVERSION:-1.x.x})
+Version: ${PATCH_VERSION:-1.x.x}
+# This next piece of .spec/sed magic puts the build OS version in the release
 Release: 1%(sed 's/^\([A-Z]\)[^ ]* \([A-Z]\)[^0-9]*\([0-9][^ ]*\).*/\1\2\3/g' /etc/redhat-release | sed 's/[^A-Z,a-z,0-9]//g')
 Summary: GridSite
 License: Modified BSD
 Group: System Environment/Daemons
 Source: %{name}-%{version}.src.tar.gz
-Prefix: %(echo ${MYPREFIX:-/usr})
+Prefix: ${MYPREFIX:-/usr}
 URL: http://www.gridsite.org/
 Vendor: GridPP
 Requires: libxml2
@@ -79,43 +99,49 @@ See http://www.gridsite.org/ for details.
 
 %build
 cd src
-make prefix=$RPM_BUILD_ROOT/%{prefix} \
- GSOAPDIR=$GSOAPDIR OPENSSL_FLAGS=$OPENSSL_FLAGS \
- OPENSSL_LIBS=$OPENSSL_LIBS FLAVOR_EXT=$FLAVOR_EXT
+make prefix=\$RPM_BUILD_ROOT/%{prefix} \
+ GSOAPDIR=\$GSOAPDIR OPENSSL_FLAGS=\$OPENSSL_FLAGS \
+ OPENSSL_LIBS=\$OPENSSL_LIBS FLAVOR_EXT=\$FLAVOR_EXT
 
-if [ -f /usr/include/fuse/fuse.h ] ; then
- make slashgrid
+EOF
+
+if [ $have_fuse ] ; then
+cat <<EOF >>gridsite.spec
+make prefix=\$RPM_BUILD_ROOT/%{prefix} \
+ GSOAPDIR=\$GSOAPDIR OPENSSL_FLAGS=\$OPENSSL_FLAGS \
+ OPENSSL_LIBS=\$OPENSSL_LIBS FLAVOR_EXT=\$FLAVOR_EXT slashgrid
+EOF
 fi
+
+cat <<EOF >>gridsite.spec
 
 %install
 cd src
-make install prefix=$RPM_BUILD_ROOT/%{prefix} \
-GSOAPDIR=$GSOAPDIR OPENSSL_FLAGS=$OPENSSL_FLAGS \
-OPENSSL_LIBS=$OPENSSL_LIBS FLAVOR_EXT=$FLAVOR_EXT
+make install prefix=\$RPM_BUILD_ROOT/%{prefix} \
+GSOAPDIR=\$GSOAPDIR OPENSSL_FLAGS=\$OPENSSL_FLAGS \
+OPENSSL_LIBS=\$OPENSSL_LIBS FLAVOR_EXT=\$FLAVOR_EXT
+EOF
 
-mkdir -p $RPM_BUILD_ROOT/etc/rc.d/init.d
+if [ $have_fuse ] ; then
 
-if [ -f /usr/include/fuse/fuse.h ] ; then
- make install-slashgrid prefix=$RPM_BUILD_ROOT/%{prefix} \
-  OPENSSL_FLAGS=$OPENSSL_FLAGS \
-  OPENSSL_LIBS=$OPENSSL_LIBS FLAVOR_EXT=$FLAVOR_EXT
-else
- echo -e '#!/bin/sh\necho SlashGrid wasnt built since no fuse-devel on build machine)' \
-   >$RPM_BUILD_ROOT/%{prefix}/sbin/slashgrid
- echo -e '#!/bin/sh\n# chkconfig: - 90 10\n# description: slashgrid\necho SlashGrid wasnt built since no fuse-devel on build machine' \
-   >$RPM_BUILD_ROOT/etc/rc.d/init.d/slashgrid
- mkdir -p $RPM_BUILD_ROOT/var/spool/slashgrid/headers
- mkdir -p $RPM_BUILD_ROOT/var/spool/slashgrid/blocks
- mkdir -p $RPM_BUILD_ROOT/var/spool/slashgrid/tmp
+cat <<EOF >>gridsite.spec
+
+mkdir -p \$RPM_BUILD_ROOT/etc/rc.d/init.d
+make install-slashgrid prefix=\$RPM_BUILD_ROOT/%{prefix} \
+  OPENSSL_FLAGS=\$OPENSSL_FLAGS \
+  OPENSSL_LIBS=\$OPENSSL_LIBS FLAVOR_EXT=\$FLAVOR_EXT
+EOF
 fi
 
+cat <<EOF >>gridsite.spec
+
 %post shared
-if [ "$UID" = "0" ] ; then
+if [ "\$UID" = "0" ] ; then
  /sbin/ldconfig
 fi
 
 %postun
-if [ "$UID" = "0" ] ; then
+if [ "\$UID" = "0" ] ; then
  /sbin/ldconfig
 fi
 
@@ -124,7 +150,7 @@ fi
 %attr(-, root, root) %{prefix}/lib/libgridsite.so
 %attr(-, root, root) %{prefix}/lib/libgridsite_globus.so.%{version}
 %attr(-, root, root) %{prefix}/lib/libgridsite_globus.so
-%attr(-, root, root) %{prefix}/share/doc/gridsite-%(echo ${MYVERSION:-1.x.x} | cut -f1-2 -d.)
+%attr(-, root, root) %{prefix}/share/doc/gridsite-${MINOR_VERSION:-1.x}
 
 %files devel
 %attr(-, root, root) %{prefix}/include/gridsite.h
@@ -163,7 +189,11 @@ fi
 %files gsexec
 %attr(4510, root, apache) %{prefix}/sbin/gsexec
 %attr(-, root, root) %{prefix}/share/man/man8/gsexec.8.gz
+EOF
 
+if [ $have_fuse ] ; then
+
+cat <<EOF >>gridsite.spec
 %package slashgrid
 Group: Applications/Internet
 Summary: slashgrid daemon
@@ -182,3 +212,7 @@ mkdir -p /grid
 %attr(0744, root, root) %{prefix}/sbin/slashgrid
 %attr(0744, root, root) /etc/rc.d/init.d/slashgrid
 %attr(0700, root, root) /var/spool/slashgrid
+EOF
+
+fi
+
